--- a/examples/From_Networkx.ipynb
+++ b/examples/From_Networkx.ipynb
@@ -2,35 +2,36 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "import networkx as nx\n",
     "import kinnetmt as knmt"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
-    "graph = nx.erdos_renyi_graph(100, 0.15)"
+    "net_from_networkx = nx.erdos_renyi_graph(100, .5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
-    "net=knmt.load(graph)"
+    "my_net = knmt.load(net_from_networkx)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -39,11 +40,98 @@
      "text": [
       "# Network:\n",
       "# 100 nodes\n",
-      "# 1442 links out\n",
-      "# 0 total weight nodes\n"
+      "# 4948 links out\n",
+      "# [] additional node attributes\n"
      ]
     }
    ],
+   "source": [
+    "my_net.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{1: 0,\n",
+       " 3: 0,\n",
+       " 4: 0,\n",
+       " 5: 0,\n",
+       " 6: 0,\n",
+       " 7: 0,\n",
+       " 8: 0,\n",
+       " 9: 0,\n",
+       " 12: 0,\n",
+       " 14: 0,\n",
+       " 16: 0,\n",
+       " 18: 0,\n",
+       " 19: 0,\n",
+       " 20: 0,\n",
+       " 22: 0,\n",
+       " 25: 0,\n",
+       " 26: 0,\n",
+       " 32: 0,\n",
+       " 33: 0,\n",
+       " 34: 0,\n",
+       " 38: 0,\n",
+       " 41: 0,\n",
+       " 42: 0,\n",
+       " 43: 0,\n",
+       " 47: 0,\n",
+       " 48: 0,\n",
+       " 50: 0,\n",
+       " 51: 0,\n",
+       " 54: 0,\n",
+       " 55: 0,\n",
+       " 56: 0,\n",
+       " 58: 0,\n",
+       " 59: 0,\n",
+       " 62: 0,\n",
+       " 63: 0,\n",
+       " 65: 0,\n",
+       " 66: 0,\n",
+       " 68: 0,\n",
+       " 70: 0,\n",
+       " 71: 0,\n",
+       " 72: 0,\n",
+       " 73: 0,\n",
+       " 84: 0,\n",
+       " 85: 0,\n",
+       " 87: 0,\n",
+       " 90: 0,\n",
+       " 92: 0,\n",
+       " 94: 0,\n",
+       " 95: 0,\n",
+       " 96: 0,\n",
+       " 98: 0,\n",
+       " 99: 0}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net=knmt.load(graph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "net.info()"
    ]
@@ -53,14 +141,63 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "os.listdir(knmt.utils.path_examples)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "netx=knmt.load(os.path.join(knmt.utils.path_examples,'potential_energy_network_5_5.gpickle.gz'),'networkx')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(netx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net=knmt.load(os.path.join(knmt.utils.path_examples,'potential_energy_network_5_5.gpickle.gz'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "type(net)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "net.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "del(net,netx)"
+   ]
   },
   {
    "cell_type": "code",
